test/compilable/parse11689.d
// REQUIRED_ARGS: -o-
// PERMUTE_ARGS:

void main()
{
    deprecated void foo() {}
}
