test/fail_compilation/gag4269c.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(X3.init))) {}
void X3(T3) { }
 